--- a/core/courses/templates/courses/manage/course/list.html
+++ b/core/courses/templates/courses/manage/course/list.html
@@ -14,6 +14,12 @@
             <div class="mt-4 flex space-x-6">
                 <a href="{% url 'course_edit' course.id %}" class="text-blue-600 hover:text-blue-800 font-medium transition-colors duration-200">Edit</a>
                 <a href="{% url 'course_delete' course.id %}" class="text-red-600 hover:text-red-800 font-medium transition-colors duration-200">Delete</a>
+                <a href="{% url 'course_module_update' course.id %}" class="text-blue-600 hover:text-blue-800 font-medium transition-colors duration-200">Edit modules</a>
+                {% if course.modules.count > 0 %}
+                <a href="{% url "module_content_list" course.modules.first.id %}">
+                  Manage contents
+                </a>
+              {% endif %}
             </div>
         </div>
         {% empty %}
