--- a/core/courses/templates/courses/manage/module/content_list.html
+++ b/core/courses/templates/courses/manage/module/content_list.html
@@ -9,14 +9,14 @@
 {% block content %}
 
 {% with course=module.course %}
-<h1 class="text-2xl font-bold mb-6">Course "{{ course.title }}"</h1>
+<h1 class="text-2xl font-bold text-center mb-6 bg-gray-200 p-4 rounded-lg hover:bg-gray-300 ">Course "{{ course.title }}"</h1>
 
 <div class="flex flex-col lg:flex-row lg:space-x-8">
-    <div class="w-1/3 mb-8 lg:mb-0 bg-gray-600 text-white p-4 rounded-lg shadow-md">
+    <div class="w-1/3 mb-8 lg:mb-0 bg-gray-900 text-white p-6 rounded-lg shadow-md">
         <h3 class="text-xl font-semibold mb-4">Modules</h3>
         <ul id="modules" class="space-y-2">
             {% for mdl in course.modules.all %}
-                <li data-id="{{mdl.id}}" {% if mdl == module %} class="selected"{% endif %} class="p-4 bg-gray-700 rounded-lg hover:bg-gray-600 {% if mdl == module %}bg-gray-600{% endif %}">
+                <li data-id="{{mdl.id}}" {% if mdl == module %} class="selected"{% endif %} class="p-4 bg-gray-800 rounded-lg hover:bg-gray-700 {% if mdl == module %}bg-gray-700{% endif %}">
                     <a href="{% url 'module_content_list' mdl.id %}" class="block text-lg font-medium text-gray-300 {% if mdl == module %}text-white{% endif %}">
                         Module <span>{{ mdl.order|add:1 }}</span>
                         <br>
@@ -27,8 +27,8 @@
                 <li class="text-gray-400">No modules yet.</li>
             {% endfor %}
         </ul>
-        <p class="mt-4">
-            <a href="{% url 'course_module_update' course.id %}" class="text-blue-200 hover:underline">Edit modules</a>
+        <p class="mt-6">
+            <a href="{% url 'course_module_update' course.id %}" class="block w-full text-center bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 transition duration-300">Edit modules</a>
         </p>
     </div>
 
@@ -38,7 +38,7 @@
 
         <div id="module-contents" class="space-y-4">
             {% for content in module.contents.all %}
-                <div class="p-4 bg-white rounded-lg shadow-md">
+                <div class="p-6 bg-white rounded-lg shadow-md">
                     {% with item=content.id %}
                     <p>{{ item }} ({{ item|model_name }})</p>
                     <a href="{% url "module_content_update" module.id item|model_name item.id %}" class="text-blue-500 hover:underline">Edit</a>
