--- a/core/courses/templates/courses/content/file.html
+++ b/core/courses/templates/courses/content/file.html
@@ -1,5 +1,5 @@
 <p>
-    <a href="{{ item.file.url }}" class="">
+    <a href="{{ item.file.url }}" class="text-blue-500 hover:text-blue-700 underline font-medium">
         Download file
     </a>
 </p>
