--- a/core/courses/templates/courses/content/image.html
+++ b/core/courses/templates/courses/content/image.html
@@ -1,3 +1,3 @@
 <p>
-    <img src="{{ item.file.url }}" alt="{{ item.title }}" />
+    <img src="{{ item.file.url }}" alt="{{ item.title }}" class="w-full max-w-xs rounded-lg shadow-lg mx-auto" />
 </p>
