--- a/core/courses/templates/courses/content/video.html
+++ b/core/courses/templates/courses/content/video.html
@@ -1,3 +1,5 @@
 {% load embed_video_tags %}
 
-{% video item.url 'small' %}
+<div class="w-full max-w-md mx-auto rounded-lg shadow-lg overflow-hidden">
+    {% video item.url 'small' %}
+</div>
